--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.15",
     "@tryghost/content-api": "^1.11.21",
@@ -22,6 +25,7 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.11",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -30,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
