Testimonials switch to Shadcn Carousel

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "coach_francis_site": "file:",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.11",
